# garmin-fit-analyzer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build-binaries.yml
demo/: README.md
scripts/: analyze_fit.py  build_binary.py
src/garmin_fit_analyzer/: __init__.py  cli.py
